crates/slab-runtime-macros/tests/ui/backend_handler_wrong_arg_type.stderr
error: event handlers must take BackendRequest as their only non-self argument
  --> tests/ui/backend_handler_wrong_arg_type.rs:14:44
   |
14 |     async fn on_inference(&mut self, _req: RuntimeControlSignal) {}
   |                                            ^^^^^^^^^^^^^^^^^^^^
